api: add FIPS report to client and server
Add a server endpoint for generating a FIPS report, and extend the
client with a subcommand to call it. The goal is to enable a Crypto
Officer without direct access to the underlying host to verify that
the system is operating in the approved mode.
